resposive navbar start

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Three Little Pigs</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <h1 class="brand-title">Three Little Pigs</h1>
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn" onclick="dropDown()">Our Products</a>
+                        <ul class="dropdown-links" id="myDropdown">
+                            <li><a href="#">Meat Cuts</a></li>
+                            <li><a href="#">Deli Cuts</a></li>
+                            <li><a href="#">Treats</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
