added more to sections

--- a/index.html
+++ b/index.html
@@ -50,17 +50,29 @@
             <h3 class="section-title">Our Story</h3>
             <div class="row">
                 <div class="column our-story-img"></div>
-                <div class="column"></div>
+                <div class="column">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
+                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                    </p>
+                    <a href="#">Learn More About Us</a>
+                </div>
             </div>
         </section>
         <!--Map & Contact-->
-        <section class="our-story">
+        <section class="map-contact">
             <h3 class="section-title">Contact Us</h3>
             <div class="row">
                 <div class="column">
-
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <div class="column"></div>
+                <div class="column">
+                    
+                </div>
             </div>
         </section>
         <!--Footer-->
@@ -69,7 +81,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
