--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                         In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
                         Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
                         Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
+                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
                     </p>
                     <a href="#">Learn More About Us</a>
                 </div>
@@ -71,7 +77,16 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="column">
-                    
+                    <h4>Got Questions?</h4>
+                    <form>
+                        <label for="name">Name:</label><br>
+                        <input type="text" id="name" name="name"><br>
+                        <label for="email">Email Address:</label><br>
+                        <input type="text" id="email" name="email"><br>
+                        <label for="message">Message:</label><br>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
         </section>
