--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
         <!--Hero Image-->
         <section class="hero-section">
             <div class="hero-item">
-                <h2 class="hero-title">We Use Everything from the Snoot to the Root</h2>
+                <h2 class="hero-title">Oink, Oink!</h2>
+                <p>
+                    For over 25 years, we've had the best selection around!
+                    Our product comes from humane, sustainable farms that care about their animals.
+                    Stop in any time to look at what delicious options we have to offer.
+                    If you can't make it in, please feel free to look at our online catalog!
+                </p>
                 <button class="hero-btn">Shop Our Products</button>
             </div>
         </section>
@@ -53,9 +59,7 @@
                 <div class="column our-story-img"></div>
                 <div class="column">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
-                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                       <span></span>
                         In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
                         Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
                         Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
