decided to go with no dropdown menu

--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Our Products
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Meat Cuts</a>
-                        <a class="dropdown-item" href="#">Deli Cuts</a>
-                        <a class="dropdown-item" href="#">Treats</a>
-                    </div>
-                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Our Products</a>
+                  </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
