--- a/products.html
+++ b/products.html
@@ -31,19 +31,165 @@
           </nav>
     </header>
     <main>
-        <section class="choices">
-            <p class="choices" id="choice1">Meat Cuts</p>
-            <p class="choices" id="choice2">Deli Cuts</p>
-            <p class="choices" id="choice3">Treats</p>
-        </section>
-        <section class="cards">
-            <div class="card-body">
-                <div id="card-img"></div>
-                <div id="card-title"></div>
-                <div id="card-cut"></div>
-                <div id="card-price"></div>
-                <button class="card-recipe">Recipes</button>
+      <!--Meat Cuts Section-->
+      <h2 class="product-title">Meat Cuts</h2>
+        <section class="card-wrapper">
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
             </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+        </section>
+        <!--Deli Cuts Section-->
+        <h2 class="product-title">Deli Cuts</h2>
+        <section class="card-wrapper">
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+        </section>
+        <!--Human Treats Section-->
+        <h2 class="product-title">Human Treats</h2>
+        <section class="card-wrapper">
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+        </section>
+        <!--Dog Treats Section-->
+        <h2 class="product-title">Dog Treats</h2>
+        <section class="card-wrapper">
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
+              <div class="card-title">Test</div>
+              <div class="card-cut">Test</div>
+              <div class="card-price">Test</div>
+              <button class="card-recipe">Recipes</button>
+            </div>
+          </div>
         </section>
     </main>
         <!--Footer-->
