--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Our Products</a>
+                    <a class="nav-link" href="./products.html">Our Products</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
