--- a/products.html
+++ b/products.html
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Our Products</a>
+                    <a class="nav-link" href="./products.html">Our Products</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
@@ -36,38 +36,34 @@
         <section class="card-wrapper">
           <div class="cards">
             <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <img src="./assets/img/m-1.jpeg" alt="menu-item">
+              <p class="card-title">Baby Back Ribs</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$4.50/lb</p>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/m-2.jpg" alt="menu-item">
+              <p class="card-title">Bacon</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$1.50/lb</p>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="cards-body">
+              <img src="./assets/img/m-3.jpg" alt="menu-item">
+              <p class="card-title">Pork Steak</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.50/lb</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Ground Pork</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.50/lb</p>
             </div>
           </div>
         </section>
@@ -77,37 +73,33 @@
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Honey Smoked Ham</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.50/lb</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Mequite Smoked Ham</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.50/lb</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Whole Ham</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$15.00</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Whole Roasted Pig</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$100.00</p>
             </div>
           </div>
         </section>
@@ -117,37 +109,33 @@
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Bacon Jerky</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$5.50/bag</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Candied Bacon</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.50/bag</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Chicharrones</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$2.50/bag</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Pickled Pork Skins</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$4.00/bag</p>
             </div>
           </div>
         </section>
@@ -157,37 +145,17 @@
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Cooked Pork Bones</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$4.00/bag</p>
             </div>
           </div>
           <div class="cards">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <div class="card-title">Test</div>
-              <div class="card-cut">Test</div>
-              <div class="card-price">Test</div>
-              <button class="card-recipe">Recipes</button>
+              <p class="card-title">Pork Snacks</p>
+              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-price">$3.00/bag</p>
             </div>
           </div>
         </section>
