added styles to divide sections of menu

--- a/products.html
+++ b/products.html
@@ -32,37 +32,37 @@
     </header>
     <main>
       <!--Meat Cuts Section-->
-      <h2 class="product-title">Meat Cuts</h2>
-        <section class="card-wrapper">
-          <div class="cards">
+      <h2 class="product-title-alt">Meat Cuts</h2>
+        <section class="card-wrapper card-wrapper-alt">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/m-1.jpeg" alt="menu-item">
               <p class="card-title">Baby Back Ribs</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$4.50/lb</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/m-2.jpg" alt="menu-item">
               <p class="card-title">Bacon</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$1.50/lb</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/m-3.jpg" alt="menu-item">
               <p class="card-title">Pork Steak</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.50/lb</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Ground Pork</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.50/lb</p>
             </div>
           </div>
@@ -74,7 +74,7 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Honey Smoked Ham</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.50/lb</p>
             </div>
           </div>
@@ -82,7 +82,7 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Mequite Smoked Ham</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.50/lb</p>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Whole Ham</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$15.00</p>
             </div>
           </div>
@@ -98,43 +98,43 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Whole Roasted Pig</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$100.00</p>
             </div>
           </div>
         </section>
         <!--Human Treats Section-->
-        <h2 class="product-title">Human Treats</h2>
-        <section class="card-wrapper">
-          <div class="cards">
+        <h2 class="product-title-alt">Human Treats</h2>
+        <section class="card-wrapper-alt">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Bacon Jerky</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$5.50/bag</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Candied Bacon</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.50/bag</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Chicharrones</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$2.50/bag</p>
             </div>
           </div>
-          <div class="cards">
+          <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Pickled Pork Skins</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$4.00/bag</p>
             </div>
           </div>
@@ -146,7 +146,7 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Cooked Pork Bones</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$4.00/bag</p>
             </div>
           </div>
@@ -154,7 +154,7 @@
             <div class="cards-body">
               <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
               <p class="card-title">Pork Snacks</p>
-              <p class="card-info">This piece of meat is delicious! You should buy all the stock we have. Placeholder text</p>
+              <p class="card-info">This piece of meat is delicious!  </p>
               <p class="card-price">$3.00/bag</p>
             </div>
           </div>
