added more sections and images

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-queries.css">
+    <script src="https://use.fontawesome.com/901a06f963.js"></script>
     <title>Three Little Pigs</title>
 </head>
 <body>
@@ -31,8 +32,60 @@
       </nav>
     </header>
     <main>
-        <h2 class="about-title">About Us</h2>
-        section.
+        <section class="about-hero">
+            <h2 class="product-title-alt">About Us</h2>
+            <img src="./assets/img/grandpa.jpg" alt="grandpa">
+            <p>It all started with grandpa...</p>
+        </section>
+        <section class="about-info">
+            <div class="about-pictures">
+                <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                <img src="./assets/img/grandpa.jpg" alt="grandpa">
+            </div>
+            <p>
+                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
+                Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+            </p>
+        </section>
+        <section class="about-values">
+            <h2 class="product-title-alt">Our Values</h2>
+            <div class="row">
+                <img src="./assets/img/grandpa.jpg" alt="">
+                <div class="column">
+                    <p>
+                       <span></span>
+                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
+                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                    </p>
+                </div>
+            </div>
+            <div class="about-belief">
+                <div class="belief-card">
+                    <i class="far fa-handshake"></i>
+                </div>
+                <div class="belief-card">
+                    <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                </div>
+                <div class="belief-card">
+                    <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                </div>
+            </div>
+        </section>
     </main>
         <!--Footer-->
     <footer>
