added border styles, icons, and fixed a little of other pages

--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
         </section>
         <section class="about-info">
             <div class="about-pictures">
-                <img src="./assets/img/grandpa.jpg" alt="grandpa">
-                <img src="./assets/img/grandpa.jpg" alt="grandpa">
-                <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                <img src="./assets/img/about-img-1.jpg" class="border-radius" alt="farmers">
+                <img src="./assets/img/about-img-2.jpg" class="border-radius" alt="farmers">
+                <img src="./assets/img/about-img-3.jpg" class="border-radius" alt="farmers">
             </div>
             <p>
                 In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
@@ -57,32 +57,29 @@
         </section>
         <section class="about-values">
             <h2 class="product-title-alt">Our Values</h2>
-            <div class="row">
-                <img src="./assets/img/grandpa.jpg" alt="">
-                <div class="column">
-                    <p>
-                       <span></span>
-                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
-                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
-                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                    </p>
-                </div>
-            </div>
+            <p class="about-values-p">
+                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
+                Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
+                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
+                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
+                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+             </p>
             <div class="about-belief">
                 <div class="belief-card">
-                    <i class="far fa-handshake"></i>
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                    <p>Humane</p>
                 </div>
                 <div class="belief-card">
-                    <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <p>Sustainable</p>
                 </div>
                 <div class="belief-card">
-                    <img src="./assets/img/grandpa.jpg" alt="grandpa">
+                    <i class="fa fa-recycle" aria-hidden="true"></i>
+                    <p>Zero Waste</p>
                 </div>
             </div>
         </section>
