--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h3 class="section-title">Our Story</h3>
             <div class="row">
                 <div class="column our-story-img"></div>
-                <div class="column">
+                <div class="column border-radius">
                     <p>
                        <span></span>
                         In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
@@ -71,10 +71,10 @@
         <section class="map-contact">
             <h3 class="section-title">Contact Us</h3>
             <div class="row">
-                <div class="column">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="column border-radius">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <div class="column">
+                <div class="column border-radius">
                     <h4>Got Questions?</h4>
                     <form>
                         <label for="name">Name:</label><br>
