finished basic designs

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <main>
         <section class="about-hero">
             <h2 class="product-title-alt">About Us</h2>
-            <img src="./assets/img/grandpa.jpg" alt="grandpa">
+            <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
             <p>It all started with grandpa...</p>
         </section>
         <section class="about-info">
