--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -58,10 +62,10 @@
         <section class="about-values">
             <h2 class="product-title-alt">Our Values</h2>
             <p class="about-values-p">
-                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Throughout our history, we have evolved into becoming a shop that only supports the most humane of farms.
+                We do not support any farms that disregard the importance of humane farming.
+                We do not support overcrowding or any abuse. Our pigs come from farms that offer plenty of space, food, and shelter. 
+                Alongisde humane practices, we also want to make sure we have a sustainable source
                 Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
                 Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
                 In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
