--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -41,7 +45,7 @@
                     Stop in any time to look at what delicious options we have to offer.
                     If you can't make it in, please feel free to look at our online catalog!
                 </p>
-                <button class="hero-btn">Shop Our Products</button>
+                <button class="hero-btn"><a href="./products.html">Shop Our Products</a></button>
             </div>
         </section>
 
@@ -76,7 +80,7 @@
                 </div>
                 <div class="column border-radius">
                     <h4>Got Questions?</h4>
-                    <form>
+                    <form action="./index.html">
                         <label for="name">Name:</label><br>
                         <input type="text" id="name" name="name"><br>
                         <label for="email">Email Address:</label><br>
