fixed some styles, changed grandpa picture, and added about text

--- a/about.html
+++ b/about.html
@@ -48,15 +48,11 @@
                 <img src="./assets/img/about-img-3.jpg" class="border-radius" alt="farmers">
             </div>
             <p>
-                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
-                Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
-                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                Grandpa had a dream. He wanted to make sure his small town had full access to delicious pork.
+                He created his business with the goal of sharing and caring for everyone near him.
+                Through word of mouth, and passing strangers, his business grew famous outside the town.
+                He became a legend in the nearby areas. He became a household name.
+                From the farm, to your table, grandpa wants to make sure you get the best pork around. 
             </p>
         </section>
         <section class="about-values">
@@ -65,12 +61,7 @@
                 Throughout our history, we have evolved into becoming a shop that only supports the most humane of farms.
                 We do not support any farms that disregard the importance of humane farming.
                 We do not support overcrowding or any abuse. Our pigs come from farms that offer plenty of space, food, and shelter. 
-                Alongisde humane practices, we also want to make sure we have a sustainable source
-                Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
-                Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
-                In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
+                Since we are a family owned business, we know that family matters. 
              </p>
             <div class="about-belief">
                 <div class="belief-card">
@@ -79,7 +70,7 @@
                 </div>
                 <div class="belief-card">
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <p>Sustainable</p>
+                    <p>Family Owned</p>
                 </div>
                 <div class="belief-card">
                     <i class="fa fa-recycle" aria-hidden="true"></i>
