going new direction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Schoolbell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -17,7 +19,7 @@
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">Three Little Pigs</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon">O</span>
+                <img src="https://img.icons8.com/material-outlined/24/000000/menu--v1.png"/>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
@@ -37,7 +39,7 @@
     <main>
         <!--Hero Image-->
         <section class="hero-section">
-            <div class="hero-item">
+            <!-- <div class="hero-item">
                 <h2 class="hero-title">Oink, Oink!</h2>
                 <p>
                     For over 25 years, we've had the best selection around!
@@ -46,17 +48,16 @@
                     If you can't make it in, please feel free to look at our online catalog!
                 </p>
                 <button class="hero-btn"><a href="./products.html">Shop Our Products</a></button>
-            </div>
+            </div> -->
         </section>
 
         <!--About US-->
-        <section class="our-story">
+        <!-- <section class="our-story">
             <h3 class="section-title">Our Story</h3>
             <div class="row">
                 <div class="column our-story-img"></div>
-                <div class="column border-radius">
+                <div class="column border-radius our-story-column">
                     <p>
-                       <span></span>
                         In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
                         Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
                         Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
@@ -70,6 +71,22 @@
                     <a href="#">Learn More About Us</a>
                 </div>
             </div>
+        </section> -->
+        <section class="our-story">
+            <div class="hero-item">
+                <h2 class="hero-title">Oink, Oink!</h2>
+                <p>
+                    For over 25 years, we've had the best selection around!
+                    Our product comes from humane, sustainable farms that care about their animals.
+                    Stop in any time to look at what delicious options we have to offer.
+                    If you can't make it in, please feel free to look at our online catalog!
+                </p>
+                <a class="hero-btn" a href="./products.html">Shop Our Products</a>
+            </div>
+        </section>
+        <!--Paralax-->
+        <section class="parallax">
+            
         </section>
         <!--Map & Contact-->
         <section class="map-contact">
