--- a/products.html
+++ b/products.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Schoolbell&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -37,7 +39,13 @@
     <main>
       <!--Meat Cuts Section-->
       <h2 class="product-title-alt">Meat Cuts</h2>
-        <section class="card-wrapper card-wrapper-alt">
+        <section class="meat-menu">
+          <div class="meat-item">
+            <p>Meat</p>
+            <img src="./assets/img/m-1.jpeg" alt="">
+          </div>
+        </section>
+        <!-- <section class="card-wrapper card-wrapper-alt">
           <div class="cards cards-alt">
             <div class="cards-body">
               <img src="./assets/img/m-1.jpeg" alt="menu-item">
@@ -70,7 +78,7 @@
               <p class="card-price">$3.50/lb</p>
             </div>
           </div>
-        </section>
+        </section> -->
         <!--Deli Cuts Section-->
         <h2 class="product-title">Deli Cuts</h2>
         <section class="card-wrapper">
