--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Schoolbell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-queries.css">
@@ -38,8 +40,8 @@
     <main>
         <section class="about-hero">
             <h2 class="product-title-alt">About Us</h2>
-            <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
-            <p>It all started with grandpa...</p>
+            <!-- <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
+            <p>It all started with grandpa...</p> -->
         </section>
         <section class="about-info">
             <div class="about-pictures">
