--- a/index.html
+++ b/index.html
@@ -89,11 +89,18 @@
             
         </section>
         <!--Map & Contact-->
-        <section class="map-contact">
+        <section class="home-contact">
             <h3 class="section-title">Contact Us</h3>
             <div class="row">
                 <div class="column border-radius">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <h4>We value your feedback, recommendations, and support!</h4>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" width="100%" height="70%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <p>
+                        123 S. East Street<br>
+                        Moon, Universe 99000<br>
+                        (000) 100-9000<br>
+                        info@threelittlepigs.com
+                    </p>
                 </div>
                 <div class="column border-radius">
                     <h4>Got Questions?</h4>
