--- a/products.html
+++ b/products.html
@@ -37,142 +37,14 @@
       </nav>
     </header>
     <main>
-      <!--Meat Cuts Section-->
-      <h2 class="product-title-alt">Meat Cuts</h2>
-        <section class="meat-menu">
-          <div class="meat-item">
-            <p>Meat</p>
-            <img src="./assets/img/m-1.jpeg" alt="">
-          </div>
-        </section>
-        <!-- <section class="card-wrapper card-wrapper-alt">
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/m-1.jpeg" alt="menu-item">
-              <p class="card-title">Baby Back Ribs</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$4.50/lb</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/m-2.jpg" alt="menu-item">
-              <p class="card-title">Bacon</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$1.50/lb</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/m-3.jpg" alt="menu-item">
-              <p class="card-title">Pork Steak</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.50/lb</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/m-4.jpg" alt="menu-item">
-              <p class="card-title">Pork Chop</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.50/lb</p>
-            </div>
-          </div>
-        </section> -->
-        <!--Deli Cuts Section-->
-        <h2 class="product-title">Deli Cuts</h2>
-        <section class="card-wrapper">
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Honey Smoked Ham</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.50/lb</p>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Mequite Smoked Ham</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.50/lb</p>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Whole Ham</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$15.00</p>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Whole Roasted Pig</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$100.00</p>
-            </div>
-          </div>
-        </section>
-        <!--Human Treats Section-->
-        <h2 class="product-title-alt">Human Treats</h2>
-        <section class="card-wrapper-alt">
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Bacon Jerky</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$5.50/bag</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Candied Bacon</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.50/bag</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Chicharrones</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$2.50/bag</p>
-            </div>
-          </div>
-          <div class="cards cards-alt">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Pickled Pork Skins</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$4.00/bag</p>
-            </div>
-          </div>
-        </section>
-        <!--Dog Treats Section-->
-        <h2 class="product-title">Dog Treats</h2>
-        <section class="card-wrapper">
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Cooked Pork Bones</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$4.00/bag</p>
-            </div>
-          </div>
-          <div class="cards">
-            <div class="cards-body">
-              <img src="./assets/img/3-pig-project.jpg" alt="menu-item">
-              <p class="card-title">Pork Snacks</p>
-              <p class="card-info">This piece of meat is delicious!  </p>
-              <p class="card-price">$3.00/bag</p>
-            </div>
-          </div>
-        </section>
+      <div class="menu-container">
+        <div class="menu-container-item"></div>
+        <div class="menu-container-item"></div>
+        <div class="menu-container-item"></div>
+        <div class="menu-container-item"></div>
+      </div>
     </main>
-        <!--Footer-->
+    <!--Footer-->
     <footer>
         <p>&copy; 2021 Walston</p>
     </footer>
