added more to redesign the homepage and about us page. Need to work on menu sometime

--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
       </nav>
     </header>
     <main>
-        <section class="about-hero">
-            <h2 class="product-title-alt">About Us</h2>
-            <!-- <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
-            <p>It all started with grandpa...</p> -->
-        </section>
+        <!-- <section class="about-hero">
+            <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
+            <p>It all started with grandpa...</p>
+        </section> -->
+        <h2 class="header">About Us</h2>
         <section class="about-info">
             <div class="about-pictures">
                 <img src="./assets/img/about-img-1.jpg" class="border-radius" alt="farmers">
@@ -57,8 +57,9 @@
                 From the farm, to your table, grandpa wants to make sure you get the best pork around. 
             </p>
         </section>
+        <div class="parallax"></div>
         <section class="about-values">
-            <h2 class="product-title-alt">Our Values</h2>
+            <h2 class="header-alt">Our Values</h2>
             <p class="about-values-p">
                 Throughout our history, we have evolved into becoming a shop that only supports the most humane of farms.
                 We do not support any farms that disregard the importance of humane farming.
